fix: heatmap not showing up below 1200w
this might be a temporary fix

--- a/web_src/less/features/heatmap.less
+++ b/web_src/less/features/heatmap.less
@@ -15,13 +15,6 @@
     fill: currentColor !important;
   }
 
-  @media @mediaLgAndDown {
-    &,
-    & + .divider {
-      display: none;
-    }
-  }
-
   .total-contributions {
     font-size: 11px;
     position: absolute;
